@@ -200,7 +200,9 @@
                              or
                              ( ${cube::region::name}[${cube::callpath::calleeid}[${i}]] =~ /^MPI_Cancel$/ )
                              or
-                             ( ${cube::region::name}[${cube::callpath::calleeid}[${i}]] =~ /^MPI_Request_free$/ ) )
+                             ( ${cube::region::name}[${cube::callpath::calleeid}[${i}]] =~ /^MPI_Request_free$/ )
+                             or
+                             ( ${cube::region::name}[${cube::callpath::calleeid}[${i}]] =~ /^MPI_Request_get_status$/ ) )
                         {
                             ${mpi_request_handling}[${i}] = 1;
                             ${mpi_request_completion}[${i}] = 1;
