@@ -140,12 +140,6 @@
  */
 #define MPI_Op_free_U MPI_OP_FREE
 
-/** @def MPI_Request_get_status_U
-    Exchange MPI_Request_get_status_U by MPI_REQUEST_GET_STATUS.
-    It is used for the Fortran wrappers of MPI_Request_get_status.
- */
-#define MPI_Request_get_status_U MPI_REQUEST_GET_STATUS
-
 
 /* lowercase defines */
 /** @def MPI_Get_version_L
@@ -225,12 +219,6 @@
     It is used for the Fortran wrappers of MPI_Op_free.
  */
 #define MPI_Op_free_L mpi_op_free
-
-/** @def MPI_Request_get_status_L
-    Exchanges MPI_Request_get_status_L by mpi_request_get_status.
-    It is used for the Fortran wrappers of MPI_Request_get_status.
- */
-#define MPI_Request_get_status_L mpi_request_get_status
 
 
 /**
@@ -533,31 +521,6 @@ FSUB( MPI_Op_free )( MPI_Op* op, int* ierr )
 
 
     *ierr = MPI_Op_free( op );
-
-    SCOREP_IN_MEASUREMENT_DECREMENT();
-}
-#endif
-#if HAVE( DECL_PMPI_REQUEST_GET_STATUS ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Request_get_status )
-/**
- * Measurement wrapper for MPI_Request_get_status
- * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std.w
- * @note Fortran interface
- * @note Introduced with MPI-2
- * @ingroup misc
- */
-void
-FSUB( MPI_Request_get_status )( MPI_Request* request, int* flag, MPI_Status* status, int* ierr )
-{
-    SCOREP_IN_MEASUREMENT_INCREMENT();
-
-
-    if ( status == scorep_mpi_fortran_status_ignore )
-    {
-        status = MPI_STATUS_IGNORE;
-    }
-
-
-    *ierr = MPI_Request_get_status( *request, flag, status );
 
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
@@ -882,40 +845,6 @@ FSUB( MPI_Op_free )( MPI_Fint* op, MPI_Fint* ierr )
     *ierr = MPI_Op_free( &c_op );
 
     *op = PMPI_Op_c2f( c_op );
-    SCOREP_IN_MEASUREMENT_DECREMENT();
-}
-#endif
-#if HAVE( DECL_PMPI_REQUEST_GET_STATUS ) && !defined( SCOREP_MPI_NO_EXTRA ) && !defined( SCOREP_MPI_NO_MISC ) && !defined( MPI_Request_get_status )
-/**
- * Measurement wrapper for MPI_Request_get_status
- * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f.w
- * @note Fortran interface
- * @note Introduced with MPI-2
- * @ingroup misc
- * For the order of events see @ref MPI_Request_get_status
- */
-void
-FSUB( MPI_Request_get_status )( MPI_Fint* request, MPI_Fint* flag, MPI_Fint* status, MPI_Fint* ierr )
-{
-    SCOREP_IN_MEASUREMENT_INCREMENT();
-    MPI_Status  c_status;
-    MPI_Status* c_status_ptr = &c_status;
-
-
-    if ( status == scorep_mpi_fortran_status_ignore )
-    {
-        /* hardcoded c_status_ptr needs to be reset */
-        c_status_ptr = MPI_STATUS_IGNORE;
-    }
-
-
-    *ierr = MPI_Request_get_status( PMPI_Request_f2c( *request ), flag, c_status_ptr );
-
-    if ( c_status_ptr != MPI_STATUS_IGNORE )
-    {
-        PMPI_Status_c2f( c_status_ptr, status );
-    }
-
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
 #endif
