@@ -72,6 +72,12 @@
  */
 #define MPI_Request_free_U MPI_REQUEST_FREE
 
+/** @def MPI_Request_get_status_U
+    Exchange MPI_Request_get_status_U by MPI_REQUEST_GET_STATUS.
+    It is used for the Fortran wrappers of MPI_Request_get_status.
+ */
+#define MPI_Request_get_status_U MPI_REQUEST_GET_STATUS
+
 /** @def MPI_Start_U
     Exchange MPI_Start_U by MPI_START.
     It is used for the Fortran wrappers of MPI_Start.
@@ -151,6 +157,12 @@
     It is used for the Fortran wrappers of MPI_Request_free.
  */
 #define MPI_Request_free_L mpi_request_free
+
+/** @def MPI_Request_get_status_L
+    Exchanges MPI_Request_get_status_L by mpi_request_get_status.
+    It is used for the Fortran wrappers of MPI_Request_get_status.
+ */
+#define MPI_Request_get_status_L mpi_request_get_status
 
 /** @def MPI_Start_L
     Exchanges MPI_Start_L by mpi_start.
@@ -404,6 +416,31 @@ FSUB( MPI_Request_free )( MPI_Request* request, int* ierr )
 
 
     *ierr = MPI_Request_free( request );
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
+#if HAVE( DECL_PMPI_REQUEST_GET_STATUS ) && !defined( SCOREP_MPI_NO_REQUEST ) && !defined( MPI_Request_get_status )
+/**
+ * Measurement wrapper for MPI_Request_get_status
+ * @note Auto-generated by wrapgen from template: SCOREP_Fmpi_Std.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup request
+ */
+void
+FSUB( MPI_Request_get_status )( MPI_Request* request, int* flag, MPI_Status* status, int* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+
+
+    if ( status == scorep_mpi_fortran_status_ignore )
+    {
+        status = MPI_STATUS_IGNORE;
+    }
+
+
+    *ierr = MPI_Request_get_status( *request, flag, status );
 
     SCOREP_IN_MEASUREMENT_DECREMENT();
 }
@@ -1208,6 +1245,40 @@ FSUB( MPI_Test_cancelled )( MPI_Fint* status, MPI_Fint* flag, MPI_Fint* ierr )
 }
 #endif
 
+#if HAVE( DECL_PMPI_REQUEST_GET_STATUS ) && !defined( SCOREP_MPI_NO_REQUEST ) && !defined( MPI_Request_get_status )
+/**
+ * Measurement wrapper for MPI_Request_get_status
+ * @note Auto-generated by wrapgen from template: SCOREP_Mpi_F2c_C2f.w
+ * @note Fortran interface
+ * @note Introduced with MPI-2
+ * @ingroup request
+ * For the order of events see @ref MPI_Request_get_status
+ */
+void
+FSUB( MPI_Request_get_status )( MPI_Fint* request, MPI_Fint* flag, MPI_Fint* status, MPI_Fint* ierr )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    MPI_Status  c_status;
+    MPI_Status* c_status_ptr = &c_status;
+
+
+    if ( status == scorep_mpi_fortran_status_ignore )
+    {
+        /* hardcoded c_status_ptr needs to be reset */
+        c_status_ptr = MPI_STATUS_IGNORE;
+    }
+
+
+    *ierr = MPI_Request_get_status( PMPI_Request_f2c( *request ), flag, c_status_ptr );
+
+    if ( c_status_ptr != MPI_STATUS_IGNORE )
+    {
+        PMPI_Status_c2f( c_status_ptr, status );
+    }
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+}
+#endif
 #if HAVE( DECL_PMPI_START ) && !defined( SCOREP_MPI_NO_REQUEST ) && !defined( MPI_Start )
 /**
  * Measurement wrapper for MPI_Start
